[gd_scene load_steps=37 format=3 uid="uid://f0hs2ojfbr54"]

[ext_resource type="Script" path="res://Enemies/Mushroom/Mushroom.gd" id="1_78p2a"]
[ext_resource type="Texture2D" uid="uid://dk3cd5baldfbs" path="res://Enemies/Mushroom/MushroomSpriteSheet.png" id="2_4b08h"]
[ext_resource type="Script" path="res://Enemies/FlyingEye/FlyingEyeTakeDamage.gd" id="3_d28nt"]
[ext_resource type="Script" path="res://Enemies/Base/StateMachine/EnemyStateMachine.gd" id="3_ibtss"]
[ext_resource type="AudioStream" uid="uid://ew8p5l1pb4sn" path="res://SFX/monster 1 hit var1 [2024-04-22 172218].aif.wav" id="4_ruqj3"]
[ext_resource type="Script" path="res://Enemies/Mushroom/States/MushroomFollowState.gd" id="4_vbd3d"]
[ext_resource type="AudioStream" uid="uid://dysu4l01ms7kj" path="res://SFX/monster 1 hit var2 [2024-04-22 172219].aif.wav" id="5_5xtmh"]
[ext_resource type="Script" path="res://Enemies/Mushroom/States/MushroomAttackState.gd" id="5_whh4s"]
[ext_resource type="AudioStream" uid="uid://betelce3rovhm" path="res://SFX/monster 1 hit var3 [2024-04-22 172220].aif.wav" id="6_j5nty"]
[ext_resource type="Script" path="res://Enemies/Mushroom/States/MushroomStunnedState.gd" id="6_qbn2o"]
[ext_resource type="Script" path="res://Enemies/Mushroom/States/MushroomSlainState.gd" id="7_xklnu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f38tf"]
size = Vector2(23, 37)

[sub_resource type="Animation" id="Animation_1qo3h"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_icc8e"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_lvwwq"]
resource_name = "ranged_attack"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41, 42, 43, 43, 43, 43]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attack_finished")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ql8wc"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_q6miu"]
resource_name = "take_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx1tf"]
_data = {
"death": SubResource("Animation_1qo3h"),
"idle": SubResource("Animation_icc8e"),
"ranged_attack": SubResource("Animation_lvwwq"),
"run": SubResource("Animation_ql8wc"),
"take_damage": SubResource("Animation_q6miu")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mplpj"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h6076"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_np10r"]
animation = &"ranged_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v326a"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ql8ge"]
animation = &"take_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2axq3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x18ai"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t2aka"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8eoii"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7jv14"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_snx5n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rcraj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_auoh7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_igyle"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kxa38"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ocx1a"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bclul"]
states/End/position = Vector2(939, 171)
states/Start/position = Vector2(453, 68)
states/death/node = SubResource("AnimationNodeAnimation_mplpj")
states/death/position = Vector2(790, 171)
states/idle/node = SubResource("AnimationNodeAnimation_h6076")
states/idle/position = Vector2(453, 171)
states/ranged_attack/node = SubResource("AnimationNodeAnimation_np10r")
states/ranged_attack/position = Vector2(310, 347)
states/run/node = SubResource("AnimationNodeAnimation_v326a")
states/run/position = Vector2(570, 47)
states/take_damage/node = SubResource("AnimationNodeAnimation_ql8ge")
states/take_damage/position = Vector2(570, 347)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_2axq3"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_x18ai"), "idle", "ranged_attack", SubResource("AnimationNodeStateMachineTransition_t2aka"), "idle", "take_damage", SubResource("AnimationNodeStateMachineTransition_8eoii"), "ranged_attack", "idle", SubResource("AnimationNodeStateMachineTransition_7jv14"), "ranged_attack", "take_damage", SubResource("AnimationNodeStateMachineTransition_snx5n"), "run", "take_damage", SubResource("AnimationNodeStateMachineTransition_rcraj"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_auoh7"), "take_damage", "idle", SubResource("AnimationNodeStateMachineTransition_igyle"), "take_damage", "death", SubResource("AnimationNodeStateMachineTransition_kxa38"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_ocx1a")]
graph_offset = Vector2(27, 204.297)

[sub_resource type="Curve" id="Curve_w28br"]
_data = [Vector2(0, 0.995117), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Mushroom" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_78p2a")
score_to_award = 35
health_to_award = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -11)
texture = ExtResource("2_4b08h")
hframes = 11
vframes = 5
frame = 43

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_f38tf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx1tf")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bclul")
anim_player = NodePath("../AnimationPlayer")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
randomness = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
scale_amount_min = 2.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_w28br")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("parent_enemy", "initial_state")]
script = ExtResource("3_ibtss")
parent_enemy = NodePath("..")
initial_state = NodePath("MushroomFollowState")

[node name="MushroomFollowState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("attack_state", "stunned_state", "attack_cooldown_timer", "enemy_state_machine")]
script = ExtResource("4_vbd3d")
attack_state = NodePath("../MushroomAttackState")
stunned_state = NodePath("../MushroomStunnedState")
attack_cooldown_timer = NodePath("../../AttackCooldownTimer")
max_velocity = 30.0
max_attack_distance = 200.0
min_attack_distance = 175.0
enemy_state_machine = NodePath("..")

[node name="MushroomAttackState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("follow_state", "stunned_state", "attack_cooldown_timer", "enemy_state_machine")]
script = ExtResource("5_whh4s")
follow_state = NodePath("../MushroomFollowState")
stunned_state = NodePath("../MushroomStunnedState")
attack_cooldown_timer = NodePath("../../AttackCooldownTimer")
enemy_state_machine = NodePath("..")

[node name="MushroomStunnedState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("follow_state", "slain_state", "enemy_state_machine")]
script = ExtResource("6_qbn2o")
follow_state = NodePath("../MushroomFollowState")
slain_state = NodePath("../MushroomSlainState")
enemy_state_machine = NodePath("..")

[node name="MushroomSlainState" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("enemy_state_machine")]
script = ExtResource("7_xklnu")
enemy_state_machine = NodePath("..")

[node name="TakeDamage" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0
script = ExtResource("3_d28nt")
sound_1 = ExtResource("4_ruqj3")
sound_2 = ExtResource("5_5xtmh")
sound_3 = ExtResource("6_j5nty")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="state_changed" from="EnemyStateMachine" to="." method="_on_enemy_state_machine_state_changed"]
